# CSC109CH07.31B

./: CMakeLists.txt  TestTriangle.h  Tests.h  Triangle.cpp  Triangle.h  main.cpp
